--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.window {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+  min-width: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.MainContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  flex-direction: column;
+  width: 600px;
+  height: 800px;
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.FormContainer {
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.PlusIcon {
+  position: absolute;
+  bottom: 20px;
 }
